kustomize/mesh/overlays/recommendation/virtual-service-recommendation-v1_and_v2_50_50.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation
  http:
  - name: primary
    route:
     - destination:
         host: recommendation
         subset: canary
       weight: 100
     - destination:
         host: recommendation
         subset: stable
       weight: 0
---
